# transmission-controller

./: .travis.yml  Cargo.toml  README.md  check  transmission-controller  upgrade
src/: cli_args.rs  common.rs  config.rs  consumer.rs  controller.rs  email.rs  fs.rs  json.rs  logging.rs  main.rs  periods.rs  transmissionrpc.rs  util.rs
src/util/: fs.rs  mod.rs  process.rs  time.rs  wrappers.rs
