[package]
name = "transmission-controller"
version = "0.2.0"
edition = "2021"
authors = ["Dmitry Konishchev <konishchev@gmail.com>"]

[dependencies]
argparse = "0.2.2"
chan = "0.1.23"
chan-signal = "0.3.3"
email = "0.0.21"
enum_primitive = "0.1.1"
enum_primitive_serde_shim = "0.2"
itertools = "0.12.1"
lettre = "0.11.7"
lettre_email = "0.9.4"
libc = "0.2.154"
log = { version = "0.4.21", features = ["std"] }
mime = "0.3.17"
num = "0.4.2"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
shellexpand = "3.1.0"
time = "0.3.36"
legacy_time = { package = "time", version = "0.1.42" }
